--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 6rem;
+}
+
+.navLink hr {
+  width: 40px;
+  color: #94a3b8;
+  font-weight: bold;
+}
+
+.navLink span {
+  font-size: 12px;
+  color: #94a3b8;
+  font-weight: bold;
+}
+
+.navLink:hover hr {
+  width: 60px;
+}
+
+.navLink:hover span {
+  color: #e2e8f0;
+}
