--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,3 +28,11 @@ html {
 .navLink:hover span {
   color: #e2e8f0;
 }
+
+.socialMediaIcon {
+  color: #94a3b8;
+}
+
+.socialMediaIcon:hover {
+  color: #e2e8f0;
+}
